tests/fail/non_empty_expression_sequence_without_return_value.tig
if (1; 2; 3; break) then ("abc")
