tests/fail/non_empty_expression_sequence_without_return_value.err
Semantic Error: break used out of a while or for statement at line 1.
Semantic Error: The condition of the if-then statement at line 1 does not return a value.
Semantic Error: The then expression of the if-then statement at line 1 should not return a value.
